--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,8 +14,5 @@ jobs:
         uses: actions/checkout@v4
       - name: install node
         uses: actions/setup-node@v4
-        with:
-            cache: 'npm'
-            cache-dependency-path: To-Do-App/app/package-lock.json
-      - run: npm ci
+      - run: npm --prefix To-Do-App/app ci
       - run: npm test
