--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/checkout@v4
       - name: install node
         uses: actions/setup-node@v4
-      - run: yarn node --prefix To-Do-App/app ci
-      - run: yarn node --prefix To-Do-App/app test
+      - run: yarn install
+        working-directory: ./To-Do-App/app
+      - run: yarn node test
+        working-directory: ./To-Do-App/app
+      #- run: yarn node --prefix To-Do-App/app ci
+      #- run: yarn node --prefix To-Do-App/app test
+
       
