--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v4
       - run: yarn install
         #working-directory: To-Do-App/app
-      - run: yarn node ./To-Do-App/app test
+      - run: yarn ./To-Do-App/app test
         #working-directory: To-Do-App/app
       #- run: yarn node --prefix To-Do-App/app ci
       #- run: yarn node --prefix To-Do-App/app test
