--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -7,8 +7,8 @@ on:
         branches: ["develop", "main"]
 
 jobs:
-  build:
-    name: test
+  CI:
+    name: CI
     runs-on: ubuntu-latest
     steps:
       - name: download project
@@ -19,6 +19,10 @@ jobs:
         working-directory: To-Do-App/app
       - run: yarn test
         working-directory: To-Do-App/app
-
-
+      - name: Log in
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Build the docker image
+        run: docker build --no-cache -t oswe/to-do-app:1v -f ./To-Do-App/app/Dockerfile .
+      - name: Push the Docker image
+        run: docker push oswe/to-do-app:1v
       
