Change names of pipeline

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CI-main
 
 on:
     pull_request:
@@ -7,8 +7,8 @@ on:
         branches: ["main"]
 
 jobs:
-  CI:
-    name: CI
+  CI-main:
+    name: CI-main
     runs-on: ubuntu-latest
     steps:
       - name: download project
