--- a/.github/workflows/pipeline-CD-main.yaml
+++ b/.github/workflows/pipeline-CD-main.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: download the image
-        run: docker pull oswe/to-do-app:latest
+        run: sudo docker pull oswe/to-do-app:latest
       - name: run the container
-        run: docker run -d -p 3000:3000 oswe/to-do-app:latest
+        run: sudo docker run -d -p 3000:3000 oswe/to-do-app:latest
       
