--- a/.github/workflows/pipeline-CI-develop.yaml
+++ b/.github/workflows/pipeline-CI-develop.yaml
@@ -22,9 +22,9 @@ jobs:
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build the docker image
-        run: docker build --no-cache -t oswe/to-do-app-develop:${BUILD_VERSION_DEVELOP} -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
+        run: docker build --no-cache -t oswe/to-do-app-develop:${{ secrets.MINOR_DEVELOP }}.${{ secrets.MINOR_DEVELOP }} -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
       - name: Push the Docker image
-        run: docker push oswe/to-do-app-develop:${RELEASE_VERSION_DEVELOP}
+        run: docker push oswe/to-do-app-develop:${{ secrets.MAJOR_DEVELOP }}.${{ secrets.MINOR }}
       - name: Build the docker image latest
         run: docker build --no-cache -t oswe/to-do-app-develop:latest -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
       - name: Push the Docker image latest
