--- a/.github/workflows/pipeline-CD-main.yaml
+++ b/.github/workflows/pipeline-CD-main.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: download the image
         run: sudo docker pull oswe/to-do-app:latest
       - name: stop containers
-        run: sudo docker stop $(docker ps -a -q)
+        run: sudo docker stop $(sudo docker ps -a -q)
       - name: run the container
         run: sudo docker run -d -p 3000:3000 oswe/to-do-app:latest
       
