--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/setup-node@v4
       - run: yarn install
         working-directory: To-Do-App/app
-      - run: yarn test
+      - name: test
+        run: yarn test
         working-directory: To-Do-App/app
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -32,7 +33,6 @@ jobs:
 
   CD-main:
     name: CD-main
-    if: ${{ github.event.action }} == 'opened'
     runs-on: self-hosted
     steps:
         - name: download the image
