--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -18,7 +18,7 @@ jobs:
       - run: yarn install
         working-directory: To-Do-App/app
       - name: test
-        run: sudo yarn test
+        run: yarn test
         working-directory: To-Do-App/app
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
