--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -18,7 +18,7 @@ jobs:
       - run: yarn install
         working-directory: To-Do-App/app
       - name: Permissions
-        run: chmod o+wrx todo.db
+        run: chmod o+wrx /etc/
       - name: test
         run: yarn test
         working-directory: To-Do-App/app
