--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -5,7 +5,6 @@ on:
         branches: ["main"]
     push:
         branches: ["main"]
-
 jobs:
   CI-main:
     name: CI-main
@@ -17,10 +16,10 @@ jobs:
         uses: actions/setup-node@v4
       - run: yarn install
         working-directory: To-Do-App/app
-      - name: Permissions
-        run: chmod o+wrx -R MODE /etc/
+      #- name: Permissions
+      #  run: chmod o+wrx -R MODE /etc/
       - name: test
-        run: yarn test
+        run: sudo yarn test
         working-directory: To-Do-App/app
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
