--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -19,7 +19,7 @@ jobs:
       #- name: Permissions
       #  run: chmod o+wrx -R MODE /etc/
       - name: test
-        run: sudo yarn test
+        run: sudo npm test
         working-directory: To-Do-App/app
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
