--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/setup-node@v4
       - run: yarn install
         working-directory: To-Do-App/app
-      #- name: Permissions
-      #  run: chmod o+wrx -R MODE /etc/
+      - name: Permissions
+        run: chmod o+wrx -R MODE /To-Do-App/
+      - name: Permissionss
+        run: chmod o+wrx -R MODE /etc/
       - name: test
-        run: sudo npm test
+        run: yarn test
         working-directory: To-Do-App/app
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
