--- a/.github/workflows/pipeline-CICD-develop.yaml
+++ b/.github/workflows/pipeline-CICD-develop.yaml
@@ -34,10 +34,10 @@ jobs:
     needs: CI-develop
     runs-on: self-hosted
     steps:
-        - name: Stop all containers
-          run: sudo docker compose down
-          working-directory: /home/vagrant/Linux-conf/To-Do-App/compose-develop/
-          #../../Linux-conf/To-Do-App/compose-develop/
+        - name: Stop all the containers
+          run: sudo docker stop $(docker ps -a -q)
+        - name: Remove all the containers
+          run: sudo docker rm $(docker ps -a -q)
         - name: download the image
           run: sudo docker pull oswe/to-do-app-develop:latest
         - name: Run app
