Add CICD to main

--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -35,10 +35,13 @@ jobs:
     needs: CI-main
     runs-on: self-hosted
     steps:
-        - name: download the image
-          run: sudo docker pull oswe/to-do-app:latest
-        - name: stop containers
-          run: sudo docker stop $(sudo docker ps -a -q)
-        - name: run the container
-          run: sudo docker run -d -p 3000:3000 oswe/to-do-app:latest
+      - name: Stop all the containers
+        run: sudo docker stop $(docker ps -a -q)
+      - name: Remove all the containers
+        run: sudo docker rm $(docker ps -a -q)
+      - name: download the image
+        run: sudo docker pull oswe/to-do-app:latest
+      - name: Run app
+        run: sudo docker compose up -d
+        working-directory: /home/vagrant/Linux-conf/To-Do-App/compose-main/
       
