--- a/To-Do-App/compose-main/docker-compose.yaml
+++ b/To-Do-App/compose-main/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
         app-notes:
                 image: oswe/to-do-app:latest
-                #container_name: app-notes
+                container_name: app-notes
                 #build:
                 #        context: ./app
                 #        dockerfile: ./Dockerfile
