add sudo command

--- a/.github/workflows/pipeline-CICD-develop.yaml
+++ b/.github/workflows/pipeline-CICD-develop.yaml
@@ -35,9 +35,9 @@ jobs:
     runs-on: self-hosted
     steps:
         - name: Stop all the containers
-          run: sudo docker stop $(docker ps -a -q)
+          run: sudo docker stop $(sudo docker ps -a -q)
         - name: Remove all the containers
-          run: sudo docker rm $(docker ps -a -q)
+          run: sudo docker rm $(sudo docker ps -a -q)
         - name: download the image
           run: sudo docker pull oswe/to-do-app-develop:latest
         - name: Run app
