--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -36,9 +36,9 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Stop all the containers
-        run: sudo docker stop $(docker ps -a -q)
+        run: sudo docker stop $(sudo docker ps -a -q)
       - name: Remove all the containers
-        run: sudo docker rm $(docker ps -a -q)
+        run: sudo docker rm $(sudo docker ps -a -q)
       - name: download the image
         run: sudo docker pull oswe/to-do-app:latest
       - name: Run app
