--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -33,7 +33,7 @@ jobs:
   CD-main:
     name: CD-main
     needs: CI-main
-    runs-on: self-hosted
+    runs-on: local-main
     steps:
       - name: Stop all the containers
         run: sudo docker stop $(sudo docker ps -a -q)
