--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -5,6 +5,9 @@ on:
         branches: ["main"]
     push:
         branches: ["main"]
+env:
+  MAJOR: '1'
+  MINOR: "0.0"
 jobs:
   CI-main:
     name: CI-main
@@ -22,9 +25,9 @@ jobs:
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build the docker image
-        run: docker build --no-cache -t oswe/to-do-app:${{ secrets.MAJOR }}.${{ secrets.MINOR }} -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
+        run: docker build --no-cache -t oswe/to-do-app:${MAJOR}.${MINOR} -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
       - name: Push the Docker image
-        run: docker push oswe/to-do-app:${{ secrets.MAJOR }}.${{ secrets.MINOR }}
+        run: docker push oswe/to-do-app:${MAJOR}.${MINOR}
       - name: Build the docker image latest
         run: docker build --no-cache -t oswe/to-do-app:latest -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
       - name: Push the Docker image latest
