--- a/.github/workflows/pipeline-CICD-develop.yaml
+++ b/.github/workflows/pipeline-CICD-develop.yaml
@@ -37,13 +37,13 @@ jobs:
     runs-on: local-develop
     steps:
         - name: Stop all the containers
-          run: sudo docker stop $(sudo docker ps -a -q)
+          run: docker stop $(docker ps -a -q)
         - name: Remove all the containers
-          run: sudo docker rm $(sudo docker ps -a -q)
+          run: docker rm $(docker ps -a -q)
         - name: download the image
-          run: sudo docker pull oswe/to-do-app-develop:latest
+          run: docker pull oswe/to-do-app-develop:latest
         - name: Run app
-          run: sudo docker compose up -d
+          run: docker compose up -d
           working-directory: /home/vagrant/Linux-conf/To-Do-App/compose-develop/
         #- name: stop containers
         #  run: sudo docker stop $(sudo docker ps -a -q)
