--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: permissions
         #run: chmod o+rwx /etc/
-        run: sudo chmod -R 777 /etc/
+        run: sudo chmod -R 7 /etc/
       - name: download project
         uses: actions/checkout@v4
       - name: install node
@@ -41,6 +41,8 @@ jobs:
     needs: CI-main
     runs-on: local-main
     steps:
+      - name: permissions
+        run: sudo chmod 6 /var/run/docker.sock
       - name: Stop all the containers
         run: docker stop $(docker ps -a -q)
       - name: Remove all the containers
