--- a/.github/workflows/pipeline-CICD-main.yaml
+++ b/.github/workflows/pipeline-CICD-main.yaml
@@ -47,6 +47,8 @@ jobs:
         run: docker stop $(docker ps -a -q)
       - name: Remove all the containers
         run: docker rm $(docker ps -a -q)
+      - name: Remove all the images
+        run: docker rmi $(docker images -aq)
       - name: download the image
         run: docker pull oswe/to-do-app:latest
       - name: Run app
