--- a/.github/workflows/pipeline-CICD-develop.yaml
+++ b/.github/workflows/pipeline-CICD-develop.yaml
@@ -27,11 +27,11 @@ jobs:
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build the docker image
-        run: docker build --no-cache -t oswe/to-do-app-develop:${MAJOR}.${MINOR} -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
+        run: docker build --no-cache -t oswe/to-do-app-develop:${MAJOR}.${MINOR} -t oswe/to-do-app-develop:latest -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
       - name: Push the Docker image
         run: docker push oswe/to-do-app-develop:${MAJOR}.${MINOR}
-      - name: Build the docker image latest
-        run: docker build --no-cache -t oswe/to-do-app-develop:latest -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
+      #- name: Build the docker image latest
+      #  run: docker build --no-cache -t oswe/to-do-app-develop:latest -f ./To-Do-App/app/Dockerfile ./To-Do-App/app/
       - name: Push the Docker image latest
         run: docker push oswe/to-do-app-develop:latest
   CD-develop:
