--- a/.github/workflows/pipeline-CICD-develop.yaml
+++ b/.github/workflows/pipeline-CICD-develop.yaml
@@ -42,11 +42,11 @@ jobs:
         - name: permissions
           run: sudo chmod 666 /var/run/docker.sock
         - name: Stop all the containers
-          run: docker stop $(docker ps -a -q)
+          run: docker ps -q | xargs -r docker stop
         - name: Remove all the containers
-          run: docker rm $(docker ps -a -q)
+          run: docker ps -a -q | xargs -r docker rm
         - name: Remove all the images
-          run: docker rmi -f $(docker images -aq)
+          run: docker images -q | xargs -r docker rmi
         - name: download the image
           run: docker pull oswe/to-do-app-develop:latest
         - name: Run app
