--- a/.github/workflows/pipeline-CICD-develop.yaml
+++ b/.github/workflows/pipeline-CICD-develop.yaml
@@ -41,17 +41,21 @@ jobs:
     steps:
         #- name: permissions
         #  run: sudo chmod 666 /var/run/docker.sock
+        - name: download the image
+          run: docker pull oswe/to-do-app-develop:latest
         - name: Stop all the containers
           run: docker ps -q | xargs -r docker stop
         - name: Remove all the containers
           run: docker ps -a -q | xargs -r docker rm
-        - name: Remove all the images
-          run: docker images -q | xargs -r docker rmi
-        - name: download the image
-          run: docker pull oswe/to-do-app-develop:latest
         - name: Run app
           run: docker compose up -d
           working-directory: /home/vagrant/Linux-conf/To-Do-App/compose-develop/
+        - name: Remove all the images
+          run: docker images -q | grep -v -e $(docker images -q --filter "reference=oswe/to-do-app-develop:latest") -e $(docker images -q --filter "reference=nginx:latest") | xargs -r docker rmi
+        #  run: docker images -q | xargs -r docker rmi
+        #- name: download the image
+        #  run: docker pull oswe/to-do-app-develop:latest
+
         #- name: stop containers
         #  run: sudo docker stop $(sudo docker ps -a -q)
         #- name: run the container
